# nordea-kredit-rate

./: Cargo.toml  Dockerfile  README.md  docker-compose-traefik.yml  docker-compose-with-traefik.yml  docker-compose.yml  grafana-dashboard.json  prometheus.yml
.github/workflows/: build-n-release.yml
configs/: grafana-dashboard.yml  grafana-datasource.yml  nordea-rate-metrics.json  prometheus.yml
src/: main.rs
