[package]
name = "nordea-rate-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.11.0", features = ["full"] }
warp = "0.3.2"
openssl = { version = "0.10.38", features = ["vendored"] }
rocket = "0.5.0-rc.2"
thiserror = "1.0.31"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"