[package]
name = "nordea-rate-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.18.2", features = ["full"] }
openssl = { version = "0.10.40", features = ["vendored"] }
rocket = "0.5.0-rc.2"
thiserror = "1.0.31"
log = "0.4.17"
pretty_env_logger = "0.4"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"